fixed spacing

--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -26,7 +26,7 @@
 }
 
 .comment-form {
-  padding-left: 100px;
+  // padding-left: 100px;
   margin-left: 15px;
 }
 
