--- a/app/assets/stylesheets/api/video_player.scss
+++ b/app/assets/stylesheets/api/video_player.scss
@@ -174,7 +174,7 @@
 
 .category-div {
   display: flex;
-  padding-top: 50px;
+  margin-top: 20px;
   margin-left: 15px;
 }
 
